...
      return;
    }
    setPage(page + 1);
    fetchBaseInfos();
  };
  return (
    <View style={styles.container} testID='baseInfoScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={baseInfoList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
