...
      return;
    }
    setPage(page + 1);
    fetchClassInfos();
  };
  return (
    <View style={styles.container} testID='classInfoScreen'>
      <FlatList
        contentContainerStyle={styles.listContent}
        data={classInfoList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
